vc technical markdown for final_technical

--- a/vc_technical.ipynb
+++ b/vc_technical.ipynb
@@ -2994,6 +2994,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# *This goes in final technical notebook after KNN!*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Random Forest"
    ]
   },
@@ -3322,7 +3329,7 @@
     "    \n",
     "}\n",
     "\n",
-    "search = GridSearchCV(pipe_rf, param_grid, scoring = 'precision', n_jobs=-1)\n",
+    "search = GridSearchCV(pipe_rf, param_grid, scoring = 'precision_macro', n_jobs=-1)\n",
     "search.fit(X_train, y_train)\n",
     "\n",
     "print(\"Best parameter (CV score=%0.3f):\" % search.best_score_)\n",
@@ -3470,12 +3477,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# add in purely minority sampling into smote parameter"
+    "# *End of random forest optimization section*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# *Start of decision tree visualization if we want to include it*\n",
+    "(requires editing)"
    ]
   },
   {
@@ -3528,6 +3541,14 @@
     "# Display in jupyter notebook\n",
     "from IPython.display import Image\n",
     "Image(filename = 'tree.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# *MAYBE*\n",
+    "(random testing, not based on previous iterative models)"
    ]
   },
   {
@@ -3686,6 +3707,13 @@
     "\n",
     "print(\"Best parameter (CV score=%0.3f):\" % search.best_score_)\n",
     "print(search.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# *Goes after Random Forest Modeling Section*"
    ]
   },
   {
