rough draft of the final notebook and the README

--- a/vc_technical.ipynb
+++ b/vc_technical.ipynb
@@ -723,9 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2450,9 +2448,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3058,9 +3054,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3291,9 +3285,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
@@ -3399,9 +3391,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3615,9 +3605,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4834,7 +4822,12 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5855,7 +5848,12 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -6901,9 +6899,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
